ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: myspace
