configmapPod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod3
  labels:
    app: helloworld
spec:
  containers:
  - name: myapp
    image: gcr.io/google-samples/node-hello:1.0
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
