pod3.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod3
  labels:
    app: helloworld
spec:
  containers:
  - name: k8s-demo
    image: arjunachari12/k8s-demo
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 3000
