primitive-pod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-pod1
  name: nginx-pod1
spec:
  containers:
  - image: nginx
    name: nginx-pod1
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
