secretPod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mysql
  labels:
    name: myapp
spec:
  containers:
  - name: myapp
    image: mysql
    ports:
      - containerPort: 3306
