helloworld-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
spec:
  replicas: 10
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      name: pod3
      labels:
        app: helloworld
    spec:
      containers:
      - name: k8s-demo
        image: arjunachari12/k8s-demo
        ports:
        - name: nodejs-port
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: nodejs-port
          initialDelaySeconds: 15
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: nodejs-port
          initialDelaySeconds: 15
          timeoutSeconds: 30
        resources:
          requests:
            memory: "6Mi"
            cpu: "25m"
          limits:
            memory: "12Mi"
            cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  selector:
    app: helloworld
  ports:
  - port: 31001
    nodePort: 31002
    targetPort: 3000
    protocol: TCP
  type: NodePort
