pod3service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  ports:
    - port: 31001
      nodePort: 31002
      targetPort: 3000
      protocol: TCP
  selector:
    app: helloworld
  type: NodePort
