pod-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    name: myingress
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: web
                port:
                  number: 8080
          - pathType: Prefix
            path: /v2
            backend:
              service:
                name: web2
                port:
                  number: 8080
